fix invisible button after leaflet update

--- a/css/site.css
+++ b/css/site.css
@@ -36,7 +36,7 @@ table.display tr:nth-child(even) {
 
 #toList.btn {
 	position: absolute;
-	z-index: 10;
+	z-index: 500;
 	bottom: 15px;
 	left: 15px;
 }
